Modify: main to index

--- a/beats.html
+++ b/beats.html
@@ -9,10 +9,9 @@
     </head>
     <body class="beats">
 
-        <div class="nav-beats">
             <navbar>
                 <div>
-                    <a href="main.html" target="_self" style="color:#000">Main</a>
+                    <a href="index.html" target="_self" style="color:#000">Main</a>
                 </div>
                 <div>
                     <a href="beats.html" target="_self" style="color:#000">Beats</a>
@@ -266,8 +265,6 @@
             <footer>
                 <p>RUSH Beats, &copy; 2021</p>
             </footer>
-
-        </div>
 
         <script src="/script.js"></script>
     </body>
