--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
         <div>
             <navbar>
                 <div>
-                    <a href="main.html" target="_self" style="color:#000">Main</a>
+                    <a href="index.html" target="_self" style="color:#000">Main</a>
                 </div>
                 <div>
                     <a href="beats.html" target="_self" style="color:#000">Beats</a>
