--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
     <body class="aboutus">
 
         <div>
-            <navbar>
+            <navbar id="nav">
                 <div>
                     <a href="index.html" target="_self" style="color:#000">Main</a>
                 </div>
@@ -36,17 +36,33 @@
 
             <section class="p-aboutus">
                 <h2>About us</h2>
-                <p class="creators">
-                    <strong>Creators</strong>: Rufus Black & Shamil Badalloff
+                <p class="creator">
+                    <strong>Creators</strong>: Rufus Black
                 </p>
                 <p class="location">
-                    <strong>Location</strong>: Amsterdam & Berlin
+                    <strong>Location</strong>: Amsterdam, Netherlands (52.371807, 4.896029)
                 </p>
                 <p class="contacts">
                     <strong>Contacts</strong>: (+xx)XXX-XXX-XXX
                 </p>
-                <p class="email-us">
-                    <a href="mailto:montederu@gmail.com" style="color:#000">Email us</a>
+                <span class="email-us">
+                    <a href="mailto:montederu@gmail.com" style="color:#000">Email us</a><br><br>
+                </span>
+                <p class="context">
+                    [FOUNDERS] started [COMPANY] because [EXPLAIN PROBLEM IN YOUR INDUSTRY].<br><br>
+
+                    That's why [DESCRIBE JOURNEY TO SOLUTION].<br><br>
+
+                    Along the way, [SHARE MILESTONES AND WINS].<br><br>
+
+                    We want to be [STATE YOUR MISSION GOING FORWARD].<br><br>
+
+                    Keep in mind that writing your actual copy in the first person (e.g. I, We) will help build a more personal connection with your audience.<br> 
+                    Your About Us page is About YOU, so don't shy away from that.<br><br>
+                </p>
+                <p class="quote">    
+                    <em>“When you make music or write or create, it’s really your job to have mind-blowing,<br> 
+                     irresponsible, condomless sex with whatever idea it is you’re writing about at the time. ”</em> ― Lady Gaga
                 </p>
             </section>
 
@@ -55,5 +71,6 @@
             </footer>
 
         </div>
+        <script src="/script.js"></script>
     </body>
 </html>
