--- a/beats.html
+++ b/beats.html
@@ -9,7 +9,7 @@
     </head>
     <body class="beats">
 
-            <navbar>
+            <navbar id="nav">
                 <div>
                     <a href="index.html" target="_self" style="color:#000">Main</a>
                 </div>
@@ -35,7 +35,7 @@
 
             <!-- Genres -->
 
-            <div class="wrapper">
+            <section class="wrapper">
                 <div class="">
                     <img src="img/first.jpg" class="transform"/>
                     <span class="genre">TRANCE</span>
@@ -260,7 +260,7 @@
                         Your browser does not support the audio element.
                     </audio>
                 </div>
-            </div>
+            </section>
 
             <footer>
                 <p>RUSH Beats, &copy; 2021</p>
