--- a/faq.html
+++ b/faq.html
@@ -10,7 +10,7 @@
     <body class="faq">
 
         <div>
-            <navbar>
+            <navbar id="nav">
                 <div>
                     <a href="index.html" target="_self" style="color:#000">Main</a>
                 </div>
@@ -35,7 +35,7 @@
             </navbar>
 
             <section class="p-faq">
-                <h2>FAQ</h2>
+                <h2 style="color: #08D4DF;">FAQ</h2>
                 <p>We're here to help!</p>
                 <p>Our dedicated customer service department are here to answer your general enquiries.</p>
             </section>
@@ -45,5 +45,6 @@
             </footer>
 
         </div>
+        <script src="/script.js"></script>
     </body>
 </html>
