--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
                 <h2>What is a Beat..</h2>
                 <img src="/img/beatsample.jpg">
                 <p>
-                   In <em>music</em> and <em>music theory</em>, the <strong>beat</strong>
-                   is the basic unit of time, the pulse (regularly repeating event), of the mensural level (or
-                   <strong>beat</strong> level).
-                   The <strong>beat</strong>
-                   is often defined as the rhythm listeners would tap their toes to when listening to a piece of music,
-                   or the numbers a musician counts while performing, though in practice this may be technically incorrect 
-                   (often the first multiple level).
-                   In popular use, <strong>beat</strong> can refer to a variety of related concepts, including pulse,
-                   tempo, meter, specific rhythms, and groove.
-                </p>
-                <p>
+                    In <em>music</em> and <em>music theory</em>, the <strong>beat</strong>
+                    is the basic unit of time, the pulse (regularly repeating event), of the mensural level (or
+                    <strong>beat</strong> level).
+                    The <strong>beat</strong>
+                    is often defined as the rhythm listeners would tap their toes to when listening to a piece of music,
+                    or the numbers a musician counts while performing, though in practice this may be technically incorrect 
+                    (often the first multiple level).
+                    In popular use, <strong>beat</strong> can refer to a variety of related concepts, including pulse,
+                    tempo, meter, specific rhythms, and groove.<br>
+                
                     It’s a way that musicians count the notes being played to stay in synch with each other,
                     and is often associated with the pulse that listeners tend to feel in the music.
                     That is to say, when one is to clap along or dance with the music, they are moving to the beat.
@@ -63,7 +62,7 @@
                     Beat is most associated with drummers or other percussion players. It’s as if they oversee the beat!
                     While all instruments that produce musical notes – the keyboards, string instruments, wind instruments
                     and brass –work to create the harmony, melody, and beat, it’s the percussion instruments that are focused on the beat.
-                </p>
+                </p=>
                 <h2>Why is a Beat Important?</h2>
                 <p>
                     Beat is a key component of music.
@@ -82,17 +81,17 @@
                     An example of hearing instruments play without any beat is demonstrated when an orchestra is tuning up.
                     Although this can actually sound pleasant, it is just the sound of instruments playing,
                     with no structure of a piece of music.<br><br>
-                    You can hear what this is like on this video:<br><br>
-
-                    <iframe height="300" width="450" src="https://www.youtube.com/embed/-oUXPLpPCK0">
-                        Your browser does not support the video tag.
-                    </iframe>
+                    You can hear what this is like on this video:<br>
                 </p>
+                <iframe class="movie" height="300" width="450" src="https://www.youtube.com/embed/-oUXPLpPCK0">
+                    Your browser does not support the video tag.
+                </iframe>
                 <h2>How Does Beat Work?</h2>
                 <p>
-                    As mentioned earlier, the time signature indicates the beat of a song. Using 4/4 time, the graphic below will help explain more.<br><br>
-                    <img src="/img/graphic.JPG" style="width:880px; height:100px;"><br><br>
-
+                    As mentioned earlier, the time signature indicates the beat of a song. Using 4/4 time, the graphic below will help explain more.
+                </p>    
+                    <img src="/img/graphic.jpg" style="width:924px; height:100px; margin-top: 60px;">
+                <p>    
                     You know this is a song written in 4/4 because:
                     The time signature at the left has two fours, one over the other
                     There are 4 beats in each measure of the music
@@ -120,19 +119,19 @@
                 </p>
                 <h2>How to Identify Beats in Music</h2>
                 <p>
-                    <strong>When Reading Music:</strong>
+                    <strong>When Reading Music:</strong><br>
                     There are slow songs, and there are fast ones.
                     The speed can be indicated by either a metronome, or by using traditional Italian music
                     terms such as Andante or Moderato, although there are many others.<br>
 
-                    Andante indicates a tempo of a moderately slow beat. Think of the speed at which you take a gentle walk.<br>
+                    Andante indicates a tempo of a moderately slow beat. Think of the speed at which you take a gentle walk.
 
-                    Here is the other way of showing the tempo of a beat. A quarter note is given a number. This number is the setting on a metronome: 120.<br>
+                    Here is the other way of showing the tempo of a beat. A quarter note is given a number. This number is the setting on a metronome: 120.
 
                     Metronomes are devices that literally keep the beat by making a repetitive sound based on the speed setting of the metronome.
                     A great way to see how this works is to visit an online metronome web site, such as this one
                     <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#000; font-size:16px;">metronome</a>.
-                </p>
+                </p=>
                 <h2>When Listening to Music:</h2>
                 <p>
                     Taking beat a bit further, let’s discuss emphasis. We tend to emphasize the downbeats. 
@@ -142,18 +141,18 @@
                     When you raise your feet you are timing with the upbeat. 
                     So literally the image of something going down and up is helpful to understand downbeats and upbeats.<br><br>
 
-                    Here is a video of a drummer explaining this:<br><br>
-
-                    <iframe height="300" width="450" src="https://www.youtube.com/embed/vEoZJlvr0r8">
+                    Here is a video of a drummer explaining this:<br>
+                </p>    
+                    <iframe height="300" width="450" src="https://www.youtube.com/embed/vEoZJlvr0r8" style="margin-bottom: 25px;">
                         Your browser does not support the video tag.
                     </iframe><br><br>
-
+                <p>    
                     Putting the emphasis on certain downbeats (or even upbeats) will alter the feel of the music. When counting beats in 4/4 time,
                     we might emphasize the first downbeat. 
                     Imagine counting in a way in which we say one number louder than the other numbers.
                     For example, saying “ONE – two – three -four.”  It is very common to emphasize the first downbeat. A good practice is to try emphasizing
-                    other downbeats, or even more than one. As an example, it is also common to emphasize the first and third beats. In saying this out
-                    loud, it would sound like “ONE – two -THREE – four.”<br>
+                    other downbeats, or even more than one. As an example, it is also common to emphasize the first and third beats.<br>
+                    In saying this out loud, it would sound like “ONE – two -THREE – four.”<br>
 
                     To fully capture the downbeats and the upbeats try saying it like this: “One – and – two – and – three – and – four -- and.”
                     Using this approach, you can emphasize any combination of downbeats or upbeats.
@@ -162,13 +161,12 @@
                     This can get tricky to achieve. Yet practice will get you closer to doing it in a correct way.<br>
 
                     Closing this lesson on beats, here is a video from a percussion specialist in which he shows just how to understand and emphasize
-                    the upbeats. He’s got rhythm!<br><br>
-
-                    <iframe height="300" width="450" src="https://www.youtube.com/embed/egVh2pg-Zzg">
-                        Your browser does not support the video tag.
-                    </iframe>
+                    the upbeats. He’s got rhythm!<br>                    
                 </p>
-                <p>Back to our<a href="beats.html" style="color:#000">Beats</a></p>
+                <iframe height="300" width="450" src="https://www.youtube.com/embed/egVh2pg-Zzg">
+                    Your browser does not support the video tag.
+                </iframe>
+                <p style="text-align: center; margin-top: 30px;">Back to our  <a href="beats.html" style="color:#000">Beats</a></p>
             </section>
 
             <footer>
@@ -176,5 +174,6 @@
             </footer>
 
         </div>
+        <script src="/script.js"></script>
     </body>
 </html>
