--- a/aboutus.html
+++ b/aboutus.html
@@ -8,69 +8,69 @@
         <title>About us</title>
     </head>
     <body class="aboutus">
+        
+        <navbar>
+            <div class="nav-item">
+                <a href="index.html" target="_self" style="color:#000">Main</a>
+            </div>
+            <div class="nav-item">
+                <a href="beats.html" target="_self" style="color:#000">Beats</a>
+            </div>
+            <div class="nav-item">
+                <a href="faq.html" target="_self" style="color:#000">FAQ</a>
+            </div>
+            <div class="nav-item">
+                <span class="logo">RUSH</span>
+            </div>
+            <div class="nav-item">
+                <a href="aboutus.html" target="_self" style="color:#000">About us</a>
+            </div>
+            <div class="nav-item">
+                <img src="img/cart.png" class="cart" class="transform"/>
+            </div>
+            <div class="nav-item">
+                <a href="login.html" target="_self" style="color:#000">Login</a>
+            </div>
+        </navbar>
 
-        <div>
-            <navbar id="nav">
-                <div>
-                    <a href="index.html" target="_self" style="color:#000">Main</a>
-                </div>
-                <div>
-                    <a href="beats.html" target="_self" style="color:#000">Beats</a>
-                </div>
-                <div>
-                    <a href="faq.html" target="_self" style="color:#000">FAQ</a>
-                </div>
-                <div>
-                    <span class="name">RUSH</span>
-                </div>
-                <div>
-                    <a href="aboutus.html" target="_self" style="color:#000">About us</a>
-                </div>
-                <div>
-                    <img src="img/cart.png" class="cart" class="transform"/>
-                </div>
-                <div>
-                    <a href="login.html" target="_self" style="color:#000">Login</a>
-                </div>
-            </navbar>
+        <article class="p-aboutus">
+            <h2>About us</h2>
+            <p class="creator">
+                <strong>Creators</strong>: Rufus Black
+            </p>
+            <p class="location">
+                <strong>Location</strong>: Amsterdam, Netherlands (52.371807, 4.896029)
+            </p>
+            <p class="contacts">
+                <strong>Contacts</strong>: (+31) 635-685-026
+            </p>
+            <span class="email-us">
+                <a href="mailto:montederu@gmail.com" style="color:#000">Email us</a><br><br>
+            </span>
+            <p class="context">
+                Rufus Black started RUSH beats because [EXPLAIN PROBLEM IN YOUR INDUSTRY].<br><br>
 
-            <section class="p-aboutus">
-                <h2>About us</h2>
-                <p class="creator">
-                    <strong>Creators</strong>: Rufus Black
-                </p>
-                <p class="location">
-                    <strong>Location</strong>: Amsterdam, Netherlands (52.371807, 4.896029)
-                </p>
-                <p class="contacts">
-                    <strong>Contacts</strong>: (+xx)XXX-XXX-XXX
-                </p>
-                <span class="email-us">
-                    <a href="mailto:montederu@gmail.com" style="color:#000">Email us</a><br><br>
-                </span>
-                <p class="context">
-                    [FOUNDERS] started [COMPANY] because [EXPLAIN PROBLEM IN YOUR INDUSTRY].<br><br>
+                That's why [DESCRIBE JOURNEY TO SOLUTION].<br><br>
 
-                    That's why [DESCRIBE JOURNEY TO SOLUTION].<br><br>
+                Along the way, [SHARE MILESTONES AND WINS].<br><br>
 
-                    Along the way, [SHARE MILESTONES AND WINS].<br><br>
+                We want to be [STATE YOUR MISSION GOING FORWARD].<br><br>
 
-                    We want to be [STATE YOUR MISSION GOING FORWARD].<br><br>
+                Keep in mind that writing your actual copy in the first person (e.g. I, We) will help build a more personal connection with your audience.<br> 
+                Your About Us page is About YOU, so don't shy away from that.<br><br>
+            </p>
+            <p class="quote">    
+                <em>
+                    “When you make music or write or create, it’s really your job to have mind-blowing,<br> 
+                    irresponsible, condomless sex with whatever idea it is you’re writing about at the time. ”
+                </em> ― Lady Gaga
+            </p>
+        </article>
 
-                    Keep in mind that writing your actual copy in the first person (e.g. I, We) will help build a more personal connection with your audience.<br> 
-                    Your About Us page is About YOU, so don't shy away from that.<br><br>
-                </p>
-                <p class="quote">    
-                    <em>“When you make music or write or create, it’s really your job to have mind-blowing,<br> 
-                     irresponsible, condomless sex with whatever idea it is you’re writing about at the time. ”</em> ― Lady Gaga
-                </p>
-            </section>
-
-            <footer>
-                <p>RUSH Beats, &copy; 2021</p>
-            </footer>
-
-        </div>
+        <footer>
+            <p>RUSH Beats, &copy; 2021</p>
+        </footer>
+        
         <script src="/script.js"></script>
     </body>
 </html>
