--- a/faq.html
+++ b/faq.html
@@ -9,42 +9,40 @@
     </head>
     <body class="faq">
 
-        <div>
-            <navbar id="nav">
-                <div>
-                    <a href="index.html" target="_self" style="color:#000">Main</a>
-                </div>
-                <div>
-                    <a href="beats.html" target="_self" style="color:#000">Beats</a>
-                </div>
-                <div>
-                    <a href="faq.html" target="_self" style="color:#000">FAQ</a>
-                </div>
-                <div>
-                    <span class="name">RUSH</span>
-                </div>
-                <div>
-                    <a href="aboutus.html" target="_self" style="color:#000">About us</a>
-                </div>
-                <div>
-                    <img src="img/cart.png" class="cart" class="transform"/>
-                </div>
-                <div>
-                    <a href="login.html" target="_self" style="color:#000">Login</a>
-                </div>
-            </navbar>
+        <navbar>
+            <div class="nav-item">
+                <a href="index.html" target="_self" style="color:#000">Main</a>
+            </div>
+            <div class="nav-item">
+                <a href="beats.html" target="_self" style="color:#000">Beats</a>
+            </div>
+            <div class="nav-item">
+                <a href="faq.html" target="_self" style="color:#000">FAQ</a>
+            </div>
+            <div class="nav-item">
+                <span class="logo">RUSH</span>
+            </div>
+            <div class="nav-item">
+                <a href="aboutus.html" target="_self" style="color:#000">About us</a>
+            </div>
+            <div class="nav-item">
+                <img src="img/cart.png" class="cart" class="transform"/>
+            </div>
+            <div class="nav-item">
+                <a href="login.html" target="_self" style="color:#000">Login</a>
+            </div>
+        </navbar>
 
-            <section class="p-faq">
-                <h2 style="color: #08D4DF;">FAQ</h2>
-                <p>We're here to help!</p>
-                <p>Our dedicated customer service department are here to answer your general enquiries.</p>
-            </section>
+        <article class="p-faq">
+            <h2>FAQ</h2>
+            <p>We're here to help!</p>
+            <p>Our dedicated customer service department are here to answer your general enquiries.</p>
+        </article>
 
-            <footer>
-                <p>RUSH Beats, &copy; 2021</p>
-            </footer>
-
-        </div>
+        <footer>
+            <p>RUSH Beats, &copy; 2021</p>
+        </footer>
+        
         <script src="/script.js"></script>
     </body>
 </html>
