--- a/login.html
+++ b/login.html
@@ -9,73 +9,71 @@
     </head>
     <body class="login">
 
-        <div>
-            <navbar id="nav">
-                <div>
-                    <a href="index.html" target="_self" style="color:#000">Main</a>
-                </div>
-                <div>
-                    <a href="beats.html" target="_self" style="color:#000">Beats</a>
-                </div>
-                <div>
-                    <a href="faq.html" target="_self" style="color:#000">FAQ</a>
-                </div>
-                <div>
-                    <span class="name">RUSH</span>
-                </div>
-                <div>
-                    <a href="aboutus.html" target="_self" style="color:#000">About us</a>
-                </div>
-                <div>
-                    <img src="img/cart.png" class="cart" class="transform"/>
-                </div>
-                <div>
-                    <a href="login.html" target="_self" style="color:#000">Login</a>
-                </div>
-            </navbar>
+        <navbar>
+            <div class="nav-item">
+                <a href="index.html" target="_self" style="color:#000">Main</a>
+            </div>
+            <div class="nav-item">
+                <a href="beats.html" target="_self" style="color:#000">Beats</a>
+            </div>
+            <div class="nav-item">
+                <a href="faq.html" target="_self" style="color:#000">FAQ</a>
+            </div>
+            <div class="nav-item">
+                <span class="logo">RUSH</span>
+            </div>
+            <div class="nav-item">
+                <a href="aboutus.html" target="_self" style="color:#000">About us</a>
+            </div>
+            <div class="nav-item">
+                <img src="img/cart.png" class="cart" class="transform"/>
+            </div>
+            <div class="nav-item">
+                <a href="login.html" target="_self" style="color:#000">Login</a>
+            </div>
+        </navbar>
 
-            <section class="hero">
-                <div class="register">
-                    <div class="overlay left">
-                        <h2>Sign in to your account</h2>
-                        <form action="submission.html" method="GET">
-                            <label for="login-email">Email:</label>
-                            <br>
-                            <input class="login-username" name="username" type="text" required minlength="3" maxlength="30" pattern="[a-zA-Z0-9]+">
-                            <br>
-                            <label for="pw">Password:</label>
-                            <br>
-                            <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
-                            <br>
-                            <input class="login-submit" type="submit" value="Submit">
-                        </form>
-                    </div>
-
-                    <div class="overlay right">
-                        <h2>Registration</h2>
-                        <form action="submission.html" method="GET">
-                            <label for="username">Email:</label>
-                            <br>
-                            <input class="login-email" name="username" type="text" required minlength="5" maxlength="30" pattern="[a-zA-Z0-9]+">
-                            <br>
-                            <label for="pw">Password:</label>
-                            <br>
-                            <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
-                            <br>
-                            <label for="retype-pw">Re-type password:</label>
-                            <br>
-                            <input class="login-retype-pw" name="pw" type="password" required minlength="6" maxlength="15">
-                            <br>
-                            <input class="login-submit" type="submit" value="Submit">
-                        </form>
-                    </div>
+        <section class="hero">
+            <div class="register">
+                <div class="overlay left">
+                    <h2>Sign in to your account</h2>
+                    <form action="submission.html" method="GET">
+                        <label for="login-email">Email:</label>
+                        <br>
+                        <input class="login-username" name="username" type="text" required minlength="3" maxlength="30" pattern="[a-zA-Z0-9]+">
+                        <br>
+                        <label for="pw">Password:</label>
+                        <br>
+                        <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <br>
+                        <input class="login-submit" type="submit" value="Submit">
+                    </form>
                 </div>
-            </section>
-            <footer>
-                <p>RUSH Beats, &copy; 2021</p>
-            </footer>
 
-        </div>
+                <div class="overlay right">
+                    <h2>Registration</h2>
+                    <form action="submission.html" method="GET">
+                        <label for="username">Email:</label>
+                        <br>
+                        <input class="login-email" name="username" type="text" required minlength="5" maxlength="30" pattern="[a-zA-Z0-9]+">
+                        <br>
+                        <label for="pw">Password:</label>
+                        <br>
+                        <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <br>
+                        <label for="retype-pw">Re-type password:</label>
+                        <br>
+                        <input class="login-retype-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <br>
+                        <input class="login-submit" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <p>RUSH Beats, &copy; 2021</p>
+        </footer>
+        
         <script src="/script.js"></script>
     </body>
 </html>
