--- a/beats.html
+++ b/beats.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Rufat Ahmed">
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,500&display=swap" rel="stylesheet">
         <title>RUSH</title>
@@ -19,9 +20,7 @@
             <div class="nav-item">
                 <a href="faq.html" target="_self" style="color:#000">FAQ</a>
             </div>
-            <div class="nav-item">
-                <span class="logo">RUSH</span>
-            </div>
+            <div class="nav-item logo">RUSH</div>
             <div class="nav-item">
                 <a href="aboutus.html" target="_self" style="color:#000">About us</a>
             </div>
