--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Rufat Ahmed">
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,500&display=swap" rel="stylesheet">
         <title>MAIN</title>
@@ -19,13 +20,11 @@
             <div class="nav-item">
                 <a href="faq.html" target="_self" style="color:#000">FAQ</a>
             </div>
-            <div class="nav-item">
-                <span class="logo">RUSH</span>
-            </div>
+            <div class="nav-item logo">RUSH</div>
             <div class="nav-item">
                 <a href="aboutus.html" target="_self" style="color:#000">About us</a>
             </div>
-            <div class="nav-item">
+            <div class="nav-item cart">
                 <img src="img/cart.png" class="cart" class="transform"/>
             </div>
             <div class="nav-item">
@@ -34,7 +33,7 @@
         </navbar>
 
         <section class="p-beathistory">
-            <h2>What is a Beat..</h2>
+            <h2>What is a Beat</h2>
             <img src="/img/beatsample.jpg">
             <p>
                 In <em>music</em> and <em>music theory</em>, the <strong>beat</strong>
