--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Rufat Ahmed">
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,500&display=swap" rel="stylesheet">
         <title>LOGIN</title>
@@ -19,9 +20,7 @@
             <div class="nav-item">
                 <a href="faq.html" target="_self" style="color:#000">FAQ</a>
             </div>
-            <div class="nav-item">
-                <span class="logo">RUSH</span>
-            </div>
+            <div class="nav-item logo">RUSH</div>
             <div class="nav-item">
                 <a href="aboutus.html" target="_self" style="color:#000">About us</a>
             </div>
@@ -38,13 +37,13 @@
                 <div class="overlay left">
                     <h2>Sign in to your account</h2>
                     <form action="submission.html" method="GET">
-                        <label for="login-email">Email:</label>
+                        <label for="login-email">Login</label>
                         <br>
-                        <input class="login-username" name="username" type="text" required minlength="3" maxlength="30" pattern="[a-zA-Z0-9]+">
+                        <input class="login-username" name="username" type="text" placeholder="Login.." required minlength="3" maxlength="30" pattern="[a-zA-Z0-9]+">
                         <br>
                         <label for="pw">Password:</label>
                         <br>
-                        <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <input class="login-pw" name="pw" type="password" placeholder="Password" required minlength="6" maxlength="15">
                         <br>
                         <input class="login-submit" type="submit" value="Submit">
                     </form>
@@ -55,15 +54,15 @@
                     <form action="submission.html" method="GET">
                         <label for="username">Email:</label>
                         <br>
-                        <input class="login-email" name="username" type="text" required minlength="5" maxlength="30" pattern="[a-zA-Z0-9]+">
+                        <input class="login-email" name="username" type="text" placeholder="Email.." required minlength="5" maxlength="30" pattern="[a-zA-Z0-9]+">
                         <br>
                         <label for="pw">Password:</label>
                         <br>
-                        <input class="login-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <input class="login-pw" name="pw" type="password" placeholder="Password" required minlength="6" maxlength="15">
                         <br>
                         <label for="retype-pw">Re-type password:</label>
                         <br>
-                        <input class="login-retype-pw" name="pw" type="password" required minlength="6" maxlength="15">
+                        <input class="login-retype-pw" name="pw" type="password" placeholder="Repeat password" required minlength="6" maxlength="15">
                         <br>
                         <input class="login-submit" type="submit" value="Submit">
                     </form>
