--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <div class="nav-item">
                 <a href="aboutus.html" target="_self" style="color:#000">About us</a>
             </div>
-            <div class="nav-item">
+            <div class="nav-item cart">
                 <img src="img/cart.png" class="cart" class="transform"/>
             </div>
             <div class="nav-item">
