layout design changes

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                 Here is the other way of showing the tempo of a beat. A quarter note is given a number. This number is the setting on a metronome: 120.
 
-                Metronomes are devices that literally keep the beat by making a repetitive sound based on the speed setting of the metronome.
+                Metronomes are devices that literally keep the beat by making a repetitive sound based on the speed setting of the metronome.<br>
                 A great way to see how this works is to visit an online metronome web site, such as this one
                 <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#000; font-size:16px;">metronome.</a>
             </p=>
@@ -148,13 +148,14 @@
                 Putting the emphasis on certain downbeats (or even upbeats) will alter the feel of the music. When counting beats in 4/4 time,
                 we might emphasize the first downbeat. 
                 Imagine counting in a way in which we say one number louder than the other numbers.
-                For example, saying “ONE – two – three -four.”  It is very common to emphasize the first downbeat. A good practice is to try emphasizing
+                For example, saying “ONE – two – three -four.”<br><br>  
+                It is very common to emphasize the first downbeat. A good practice is to try emphasizing
                 other downbeats, or even more than one. As an example, it is also common to emphasize the first and third beats.<br>
-                In saying this out loud, it would sound like “ONE – two -THREE – four.”<br>
+                In saying this out loud, it would sound like “ONE – two -THREE – four.”<br><br>
 
                 To fully capture the downbeats and the upbeats try saying it like this: “One – and – two – and – three – and – four -- and.”
                 Using this approach, you can emphasize any combination of downbeats or upbeats.
-                Try placing the emphasis on the first and third upbeats. This would be “one – AND – two – and – three – AND – four -- and.”<br>
+                Try placing the emphasis on the first and third upbeats. This would be “one – AND – two – and – three – AND – four -- and.”<br><br>
 
                 This can get tricky to achieve. Yet practice will get you closer to doing it in a correct way.<br>
 
