--- a/login.html
+++ b/login.html
@@ -35,7 +35,16 @@
         <section class="hero">
             <div class="register">
                 <div class="overlay left">
-                    <h2>Sign in to your account</h2>
+                    <h3>Not a member yet?</h3>
+                    <h4>Registration</h4>
+                    <form action="submission.html" method="GET">
+                        <input class="login-submit" type="submit" value="Create an account">
+                    </form>
+                </div>
+            
+                <div class="overlay right">
+                    <h3>Already a member?</h3>
+                    <h4>Sign in</h4>
                     <form action="submission.html" method="GET">
                         <label for="login-email">Login</label>
                         <br>
@@ -48,26 +57,8 @@
                         <input class="login-submit" type="submit" value="Submit">
                     </form>
                 </div>
-
-                <div class="overlay right">
-                    <h2>Registration</h2>
-                    <form action="submission.html" method="GET">
-                        <label for="username">Email:</label>
-                        <br>
-                        <input class="login-email" name="username" type="text" placeholder="Email.." required minlength="5" maxlength="30" pattern="[a-zA-Z0-9]+">
-                        <br>
-                        <label for="pw">Password:</label>
-                        <br>
-                        <input class="login-pw" name="pw" type="password" placeholder="Password" required minlength="6" maxlength="20">
-                        <br>
-                        <label for="retype-pw">Re-type password:</label>
-                        <br>
-                        <input class="login-retype-pw" name="pw" type="password" placeholder="Repeat password" required minlength="6" maxlength="20">
-                        <br>
-                        <input class="login-submit" type="submit" value="Submit">
-                    </form>
-                </div>
-            </div>
+            </div>    
+                
         </section>
         <footer>
             <p>RUSH Beats, &copy; 2021</p>
