--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 Metronomes are devices that literally keep the beat by making a repetitive sound based on the speed setting of the metronome.<br>
                 A great way to see how this works is to visit an online metronome web site, such as this one
-                <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#000; font-size:16px;">metronome.</a>
+                <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#000; font-size:16px;" class="metronome">metronome.</a>
             </p=>
             <h2>When Listening to Music:</h2>
             <p>
