--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
         
         <navbar>
             <div class="nav-item">
-                <a href="index.html" target="_self" style="color:#000">Main</a>
+                <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
             </div>
             <div class="nav-item">
-                <a href="beats.html" target="_self" style="color:#000">Beats</a>
+                <a href="beats.html" target="_self" style="color:#2D2926FF">Beats</a>
             </div>
             <div class="nav-item">
-                <a href="faq.html" target="_self" style="color:#000">FAQ</a>
+                <a href="faq.html" target="_self" style="color:#2D2926FF">FAQ</a>
             </div>
             <div class="nav-item logo">RUSH</div>
             <div class="nav-item">
-                <a href="aboutus.html" target="_self" style="color:#000">About us</a>
+                <a href="aboutus.html" target="_self" style="color:#2D2926FF">About us</a>
             </div>
             <div class="nav-item cart">
                 <img src="img/cart.png" class="cart" class="transform"/>
             </div>
             <div class="nav-item">
-                <a href="login.html" target="_self" style="color:#000">Login</a>
+                <a href="login.html" target="_self" style="color:#2D2926FF">Login</a>
             </div>
         </navbar>
 
@@ -128,7 +128,7 @@
 
                 Metronomes are devices that literally keep the beat by making a repetitive sound based on the speed setting of the metronome.<br>
                 A great way to see how this works is to visit an online metronome web site, such as this one
-                <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#000; font-size:16px;" class="metronome">metronome.</a>
+                <a href="https://www.flutetunes.com/metronome/" target="_blank" style="color:#2D2926FF; font-size:16px;" class="metronome">metronome.</a>
             </p=>
             <h2>When Listening to Music:</h2>
             <p>
@@ -165,7 +165,7 @@
             <iframe height="300" width="450" src="https://www.youtube.com/embed/egVh2pg-Zzg">
                 Your browser does not support the video tag.
             </iframe>
-            <p style="text-align: center; margin-top: 30px;">Back to the<a href="beats.html" style="color:#000">Beats</a></p>
+            <p style="text-align: center; margin-top: 30px;">Back to the<a href="beats.html" class="beats-btn" style="color:#2D2926FF">Beats</a></p>
         </section>
 
         <footer>
