--- a/login.html
+++ b/login.html
@@ -12,23 +12,23 @@
 
         <navbar>
             <div class="nav-item">
-                <a href="index.html" target="_self" style="color:#000">Main</a>
+                <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
             </div>
             <div class="nav-item">
-                <a href="beats.html" target="_self" style="color:#000">Beats</a>
+                <a href="beats.html" target="_self" style="color:#2D2926FF">Beats</a>
             </div>
             <div class="nav-item">
-                <a href="faq.html" target="_self" style="color:#000">FAQ</a>
+                <a href="faq.html" target="_self" style="color:#2D2926FF">FAQ</a>
             </div>
             <div class="nav-item logo">RUSH</div>
             <div class="nav-item">
-                <a href="aboutus.html" target="_self" style="color:#000">About us</a>
+                <a href="aboutus.html" target="_self" style="color:#2D2926FF">About us</a>
             </div>
             <div class="nav-item cart">
                 <img src="img/cart.png" class="cart" class="transform"/>
             </div>
             <div class="nav-item">
-                <a href="login.html" target="_self" style="color:#000">Login</a>
+                <a href="login.html" target="_self" style="color:#2D2926FF">Login</a>
             </div>
         </navbar>
 
