nav menu modyfication

--- a/beats.html
+++ b/beats.html
@@ -10,7 +10,7 @@
     </head>
     <body class="beats">
 
-        <navbar>
+        <navbar id="nav">
             <div class="nav-item">
                 <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
             </div>
