styling the navigation toggle menu

--- a/beats.html
+++ b/beats.html
@@ -35,6 +35,10 @@
             </div>
         </navbar>
 
+        <section>
+            <div class="toggle-menu-inactive"><></div>
+        </section>
+
         <!-- Genres -->
 
         <section class="wrapper">
