--- a/faq.html
+++ b/faq.html
@@ -35,6 +35,10 @@
             </div>
         </navbar>
 
+        <section>
+            <div class="toggle-menu-inactive"><></div>
+        </section>
+
         <article class="p-faq">
             <h2>FAQ</h2>
             <p>We're here to help!</p>
