--- a/login.html
+++ b/login.html
@@ -35,6 +35,10 @@
             </div>
         </navbar>
 
+        <section>
+            <div class="toggle-menu-inactive"><></div>
+        </section>
+
         <section class="hero">
             <div class="register">
                 <div class="overlay left">
