--- a/aboutus.html
+++ b/aboutus.html
@@ -35,6 +35,10 @@
             </div>
         </navbar>
 
+        <section>
+            <div class="toggle-menu-inactive"><></div>
+        </section>
+
         <article class="p-aboutus">
             <h2>About us</h2>
             <p class="creator">
