--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </div>
         </navbar>
 
+        <section>
+            <div class="toggle-menu-inactive"><></div>
+        </section>
+
         <section class="p-beathistory">
             <h2>What is a Beat</h2>
             <img src="/img/beatsample.jpg">
