navigation toggle menu modifications

--- a/faq.html
+++ b/faq.html
@@ -11,9 +11,6 @@
     <body class="faq">
 
         <navbar id="nav">
-            <div>
-                <span class="toggle-menu-active"><></span>   
-            </div>
             <div class="nav-item">
                 <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
             </div>
@@ -36,7 +33,7 @@
         </navbar>
 
         <section>
-            <div class="toggle-menu-inactive"><></div>
+            <div class="open-menu"><></div>
         </section>
 
         <article class="p-faq">
